refactor: Collectors.toList() to .toList()